--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="manifest" href="/manifest.json">
 
   <title>Budget Tracker</title>
 </head>
@@ -45,5 +46,18 @@
   <script src="js/index.js"></script>
   <!-- link file that handles all IndexedDB functionality -->
   <script src = "js/idb.js"></script>
+
 </body>
+
+<!-- function to register service worker -->
+<script>
+  (function() {
+    if("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("./service-worker.js")
+        .then(() => console.log("Service Worker registered successfully."))
+        .catch(error => console.log("Service Worker registration failed:", error));
+    }
+  })();
+  </script>
+  
 </html>
